--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "dbt>=1.0.0.40.12",
-    "dbt-core>=1.11.2",
-    "snowflake>=1.10.0",
+    "dbt-core>=1.8.0",
+    "dbt-snowflake>=1.8.0",
 ]
