--- a/AWS_DBT_Snowflake_Project/profiles.yml
+++ b/AWS_DBT_Snowflake_Project/profiles.yml
@@ -3,7 +3,7 @@ AWS_DBT_Snowflake_Project:
     dev:
       account: VUZPJDO-YQC92091
       database: AIRBNB
-      password: "Akshith#gopal@2001"
+      password : **************
       role: ACCOUNTADMIN
       schema: dbt_schema
       threads: 1
